@@ -200,7 +200,7 @@ public class RATGenerator {
             if (chassisIndex.get(era).get(unit).containsKey(factionRecord.getKey())) {
                 retVal = chassisIndex.get(era).get(unit).get(factionRecord.getKey());
             } else if (factionRecord.getParentFactions().size() == 1) {
-                retVal = findChassisAvailabilityRecord(era, unit, factionRecord.getParentFactions().get(0), year);
+                retVal = findChassisAvailabilityRecord(era, unit, factionRecord.getParentFactions().getFirst(), year);
             } else if (!factionRecord.getParentFactions().isEmpty()) {
                 ArrayList<AvailabilityRating> list = new ArrayList<>();
                 for (String alt : factionRecord.getParentFactions()) {
@@ -260,7 +260,7 @@ public class RATGenerator {
 
             // If the provided faction has a single parent, return its availability
             if (factionRecord.getParentFactions().size() == 1) {
-                return findModelAvailabilityRecord(era, unit, factionRecord.getParentFactions().get(0));
+                return findModelAvailabilityRecord(era, unit, factionRecord.getParentFactions().getFirst());
             } else if (!factionRecord.getParentFactions().isEmpty()) {
                 // If neither the faction nor a direct parent is directly specified and multiple parent factions are
                 // available, calculate an average between them
@@ -423,10 +423,12 @@ public class RATGenerator {
         factions.remove(rec.getKey());
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public void removeFaction(String key) {
         factions.remove(key);
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public Collection<String> getFactionKeySet() {
         return factions.keySet();
     }
@@ -467,7 +469,7 @@ public class RATGenerator {
             totalAdj += ar.ratingAdjustment;
         }
 
-        AvailabilityRating retVal = avList.get(0).makeCopy(faction);
+        AvailabilityRating retVal = avList.getFirst().makeCopy(faction);
 
         retVal.availability = (int) (AvailabilityRating.calcAvRating(totalWt / avList.size()));
         if (totalAdj != 0) {
@@ -567,7 +569,7 @@ public class RATGenerator {
         ArrayList<String> factionRatings = fRec.getRatingLevelSystem();
         int numRatingLevels = factionRatings.size();
         if (rating == null && fRec.getRatingLevels().size() == 1) {
-            ratingLevel = factionRatings.indexOf(fRec.getRatingLevels().get(0));
+            ratingLevel = factionRatings.indexOf(fRec.getRatingLevels().getFirst());
         }
 
         if (rating != null && numRatingLevels > 1) {
@@ -632,7 +634,7 @@ public class RATGenerator {
 
                 // Find the chassis availability at the start of the era, or at
                 // intro date, including dynamic modifiers
-                int interpolationStart = Math.max(currentEra, Math.min(year, curChassis.introYear));
+                int interpolationStart = Math.clamp(curChassis.introYear, currentEra, year);
                 chassisAdjRating = curChassis.calcAvailability(chassisAvRating,
                       ratingLevel,
                       numRatingLevels,
@@ -1749,7 +1751,7 @@ public class RATGenerator {
                                       ? "' omni='Clan"
                                       : "' omni='IS";
                             }
-                            pw.println("\t<chassis name='" + cr.getChassis().replaceAll("'", "&apos;")
+                            pw.println("\t<chassis name='" + cr.getChassis().replace("'", "&apos;")
                                   + "' unitType='" + UnitType.getTypeName(cr.getUnitType())
                                   + omni + "'>");
                             pw.print("\t\t<availability>");
@@ -1776,7 +1778,7 @@ public class RATGenerator {
                                     }
 
                                     if (!avFields.isEmpty()) {
-                                        pw.print("\t\t<model name='" + mr.getModel().replaceAll("'", "&apos;"));
+                                        pw.print("\t\t<model name='" + mr.getModel().replace("'", "&apos;"));
                                         if (mr.getUnitType() == UnitType.BATTLE_ARMOR) {
                                             pw.print("' mechanized='" + mr.canDoMechanizedBA());
                                         }
