@@ -75,15 +75,15 @@ public class UnitFileMigrationTool {
                     continue;
                 }
 
-                if (lines.get(0).startsWith("Version:")) {
-                    lines.remove(0);
+                if (lines.getFirst().startsWith("Version:")) {
+                    lines.removeFirst();
                 } else {
                     continue;
                 }
 
-                if (!lines.get(0).contains(":")) {
-                    String chassis = lines.remove(0);
-                    lines.add(0, MtfFile.CHASSIS + chassis);
+                if (!lines.getFirst().contains(":")) {
+                    String chassis = lines.removeFirst();
+                    lines.addFirst(MtfFile.CHASSIS + chassis);
                 } else {
                     continue;
                 }
